# dual-lens-value-screener

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml
alembic/: env.py
doc/: 公式与评分梳理.md
docs/: dcf-sector-algorithms.md  investment-master-skill.md  tushare-积分与接口限制说明.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: AiHistoryPage.tsx  (+13 more)
scripts/: dev.ps1  dev.sh  import-dotenv.ps1
tests/: conftest.py  test_backtest_engine.py  test_backtest_route.py  test_backtest_service.py  test_batch_screening_chunked.py  test_combined_ranking_and_coverage.py  test_company_ai_analysis.py  test_company_ai_dcf_snapshot.py  test_company_detail_dcf_route.py  test_company_name_search.py  test_dcf.py  test_dcf_company_valuation.py  test_dcf_financial_sync.py  test_dcf_net_debt_resolve.py  test_dcf_sector_policy.py  test_dcf_stage1_growth_infer.py  test_financial_statement_job_params.py  test_financial_statement_payload.py  test_financial_statement_sync_filter.py  test_financial_statement_window.py  test_industry_filter.py  test_investment_quality.py  test_investment_quality_ai_summary.py  test_investment_quality_run_context.py  test_market_dividend_yield_sort.py  test_post_pipeline_busy.py  test_post_pipeline_route.py  test_score_explanation.py  test_scoring.py  test_screening_hybrid_persist.py  test_symbol_normalize.py  test_third_lens.py  test_ts_code_format.py  test_tushare_fetch_concurrency.py  test_tushare_rate_limiter.py  test_tushare_trade_date.py  test_valuation_metrics.py
(+128 files in other folders)
