[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dual-lens-value-screener"
version = "0.1.0"
description = "Graham-style and Buffett-style dual-lens stock screening (MVP API)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "redis>=5.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.26.0", "pytest>=7.4.0"]
a-share = ["tushare>=1.4.0", "akshare>=1.14.0", "pandas>=2.0.0"]

[project.scripts]
value-screener = "value_screener.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
